--- a/resources/views/comments.twig
+++ b/resources/views/comments.twig
@@ -3,6 +3,7 @@
     <div id="disqus_thread"></div>
 {% endif %}
 
+{# Disqus JS embed code #}
 <script>
     var disqus_config = function () {
         this.page.url = '{{ url_current() }}';
